# score-vision

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh  min_compute.yaml  pyproject.toml  requirements.txt  setup.py  validator_auto_update.sh
miner/: .env.example  README.md  REQUIREMENTS.md  dependencies.py  main.py  setup.py
miner/challenge_outputs/: challenge_results_3398.json  challenge_results_3409.json  challenge_results_3412.json  challenge_results_3414.json  challenge_results_3420.json  challenge_results_3426.json  challenge_results_3433.json  challenge_results_3434.json  challenge_results_3436.json  challenge_results_3438.json  challenge_results_3441.json  challenge_results_3445.json  challenge_results_3448.json  challenge_results_3452.json  challenge_results_3456.json  challenge_results_3458.json  challenge_results_3461.json  challenge_results_3468.json
miner/core/: configuration.py
miner/core/models/: config.py
miner/endpoints/: availability.py  soccer.py
miner/scripts/: download_models.py  test_pipeline.py
miner/sports/annotators/: soccer.py
miner/utils/: device.py  model_manager.py  shared.py  video_downloader.py  video_processor.py
validator/: .env.example  README.md  REQUIREMENTS.md  __init__.py  config.py  dependencies.py  main.py  setup.py
validator/challenge/: challenge_process.py  challenge_types.py  send_challenge.py
validator/db/: operations.py  schema.py
validator/endpoints/: health.py
validator/evaluation/: bbox_clip.py  calculate_score.py  evaluation.py  evaluation_loop.py  evaluation_process.py  keypoint_scoring.py  prompts.py  set_weights.py
validator/tests/: test_evaluation.py
validator/utils/: __init__.py  api.py  async_utils.py  common.py  frame_filter.py  vlm_api.py
